@@ -1,3 +1,7 @@
+Thu Nov 30 20:14:05 CET 2006 Christian Anthon <anthon@kiku.dk>
+
+	* gtkoptions.c: gtk sizing problem in sound options.
+
 Tue Nov 28 23:59:09 CET 2006  Christian Anthon <anthon@kiku.dk>
 
 	* sound.c: cleanup of play_file
